Merge branch 'main' into homematic-checkstyle
Signed-off-by: Leo Siepel <leosiepel@gmail.com>